--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
 <head>
+  <meta name="google-site-verification" content="U_2nR9b2bVUslx7p3CKl7CbvLacYHCKK8E7RXiGoqtQ" />
   <meta charset="utf-8" />
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
