--- a/ceramic.html
+++ b/ceramic.html
@@ -54,7 +54,7 @@
   <a href="hangars.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">قرميد</a>
+  <a href="ceramic.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
@@ -76,9 +76,9 @@
   <div class="container">
 
     <div class="card">
-      <h2>أفضل أنواع القرميد في خميس مشيط وأبها</h2>
+      <h2>أفضل أنواع سندوتش بنل في خميس مشيط وأبها</h2>
       <p class="subtitle">
-قرميد بلاستيك بأفضل الاسعار واجود الخامات خميس مشيط قرميد خميس مشيط تركيب قرميد فلل اشكال وديكورات القرميد الايطالي قرميد معدني قرميد القصور تركيب سقف قرميد ازرق واحمر قرميد بلاستيك خميس مشيط قرميد فخار ومعدني ايطالي اسباني وطني كوري باقل الاسعار ,قرميد تركى,قرميد بلاستيك,قرميد تركى,الواح قرميد بلاستيك,قرميد مستورد ومصري للبيع,قرميد ، قرميد تركى - قرميد تركي اسعار تركيب احدث انواع القرميد ايطالي اسباني وطني      </p>
+هناجر الساندويتش بانل هي هناجر مصنوعة من لوحات الساندويتش بانل، وهي لوحات مركبة تتكون من طبقتين خارجيتين من المعدن (مثل الفولاذ المجلفن) وطبقة عازلة موجودة بينهما. تعتبر الهناجر الساندويتش بانل خفيفة الوزن ومتينة وتتميز بخصائص العزل الحراري والعزل الصوتي. تستخدم هناجر الساندويتش بانل في العديد من التطبيقات، بما في ذلك: المستودعات والمخازن: يمكن استخدام هناجر الساندويتش بانل لإنشاء مساحات تخزين كبيرة وآمنة للمواد والبضائع. المصانع وورش العمل: يمكن استخدامها في بناء مصانع وورش عمل لتوفير مساحات عمل واسعة ومريحة. مرائب السيارات: تستخدم
 
       <div class="badges">
         <div class="badge">تركيب سريع</div>
@@ -92,26 +92,27 @@
       </div>
 
       <!-- =================== معرض الصور =================== -->
-      <h3 style="margin-top:25px">معرض صور القرميد</h3>
+      <h3 style="margin-top:25px">معرض صور سندوتش بنل</h3>
 
       <div class="gallery">
         <!-- غيري المسارات حسب صورك -->
-        <img src="https://ik.imagekit.io/lx9tl2p3c/100.jpg?updatedAt=1763734920047" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/101.jpg?updatedAt=1763734920077" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/102.jpeg?updatedAt=1763734920046" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/103.jpg?updatedAt=1763734945295" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/104.jpg?updatedAt=1763734977430" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/105.jpg?updatedAt=1763734979223" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/107.jpg?updatedAt=1763734982017" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/108.jpeg?updatedAt=1763734979356" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/109.jpg?updatedAt=1763735029329" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/112.jpg?updatedAt=1763735056316" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/113.jpeg?updatedAt=1763735040597" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/114.jpg?updatedAt=1763735040633" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/115.jpg?updatedAt=1763735041203" class="img-item">
-        <img src="https://ik.imagekit.io/lx9tl2p3c/106.jpg?updatedAt=1763735001944" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/170.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/185.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/177.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/186.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/176.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/182.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171540_Google.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171523_Google.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/180.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/174.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/172.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/179.jpg" class="img-item">
+        <img src="https://ik.imagekit.io/lx9tl2p3c/181.jpg" class="img-item">
 
      </div>
 
