--- a/iron-sater.html
+++ b/iron-sater.html
@@ -55,7 +55,7 @@
   <a href="hangars.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">قرميد</a>
+  <a href="ceramic.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
