--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
  <title>أفضل مظلات وبرجولات وهناجر في خميس مشيط وأبها | مؤسسة بدرية للمقاولات</title>
   <link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
 </head>
 <body>
@@ -55,7 +55,7 @@
   <a href="hangars.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">قرميد</a>
+  <a href="ceramic.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
@@ -242,7 +242,23 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%AA%D8%B1%D9%83%D9%8A%D8%A8-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8%D9%8A%D8%A9-%D9%88%D9%82%D9%85%D8%A7%D8%B4-%D9%88%D8%A8%D9%84%D8%A7%D8%B3%D8%AA%D9%8A%D9%83480.jpg?updatedAt=1764010221961" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A3%D8%B3%D8%B9%D8%A7%D8%B1-%D8%AA%D9%86%D8%A7%D9%81%D8%B3%D9%8A%D8%A9-%D9%84%D8%A7%D8%AD%D8%AF%D8%AB-%D8%A7%D8%B4%D9%83%D8%A7%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6146%20(1).jpg?updatedAt=1764010226304" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%B3%D8%AF%D8%A7%D8%B3%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AB%D9%85%D8%A7%D9%86%D9%8A%D8%A9-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AD%D8%AF%D8%A7%D8%A6%D9%82-%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B6666.jpg?updatedAt=1764010221769" class="img-item">
-
+  <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/170.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/185.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/177.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/186.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/176.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/182.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171540_Google.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/Screenshot_20251127-171523_Google.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/180.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/174.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/172.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/179.jpg" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/181.jpg" class="img-item">
 </div>
 
 <!-- نافذة Lightbox -->
@@ -406,11 +422,43 @@
       <h3>درابزين وطاولات</h3>
       <p style="color:var(--muted)">منتجات إضافية للديكور الخارجي ومناطق الاستراحة.</p>
     </section>
+    <section class="map-section">
+    <h2>موقعنا على الخريطة</h2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3786.1310883789056!2d42.70638448510908!3d18.386884087486933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDIzJzEyLjgiTiA0MsKwNDInMTUuMSJF!5e0!3m2!1sar!2s!4v1764259554718!5m2!1sar!2s"       width="100%"
+        height="350"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
     <footer>
+      <footer>
+  <p>تابعونا على مواقع التواصل</p>
+
+  <div class="social-icons">
+    <a href="https://www.instagram.com/mohammed2321571?utm_source=qr&igsh=Nnl0YWxmcHFleTd2" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.tiktok.com/@user5661981542987?_r=1&_t=ZS-91jFs6p0IgZ" target="_blank"><i class="fab fa-tiktok"></i></a>
+    <a href="https://youtube.com/channel/UCb5DW6UsuY3WXLFTrR87swQ?si=aBUMSqoJj0e0KpV0" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://haraj.com.sa/users/%D8%AD%D8%AF%D8%A7%D8%AF%20%D9%87%D9%86%D8%A7%D8%AC%D8%B1%20-%D9%85%D8%B8%D9%84%D8%A7%D8%AA" target="_blank"><i class="fas fa-link"></i></a>
+  </div>
+</footer>
   جميع الحقوق محفوظة لمؤسسة بدرية للمقاولات © 2025
     </footer>
   </main>
-  <a class="quick-contact" href="https://wa.me/966556076357" target="_blank">📞 راسلنا الآن</a>
+  <!-- <a class="quick-contact" href="https://wa.me/966556076357" target="_blank">📞 راسلنا الآن</a> -->
+   <!-- أيقونات واتساب + اتصال -->
+<div class="contact-floating">
+  
+  <!-- واتساب -->
+  <a href="https://wa.me/966556076357" target="_blank" class="whatsapp-btn">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+
+  <!-- اتصال -->
+<a href="tel:0556076357" class="call-btn">
+    <i class="fas fa-phone"></i>
+  </a>
+
+</div>
   <script src="js.js"></script>
 </body>
 </html>
