--- a/school-shades.html
+++ b/school-shades.html
@@ -52,7 +52,7 @@
   <a href="hangars.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">قرميد</a>
+  <a href="ceramic.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
