--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
- <title>أفضل مظلات وبرجولات وهناجر في خميس مشيط وأبها | مؤسسة بدرية للمقاولات</title>
+ <title>مظلات حميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
   <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
@@ -17,7 +17,9 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <div class="logo">مؤسسة بدرية</div>
+          <div class="logo">
+              <img src="https://ik.imagekit.io/lx9tl2p3c/logo.jpg" alt="لوجو 1" class="">
+          </div>
           <div>
             <h1>مظلات وبرجولات وهناجر</h1>
             <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مؤسسة بدرية للمقاولات</div>
@@ -422,7 +424,15 @@
       <h3>درابزين وطاولات</h3>
       <p style="color:var(--muted)">منتجات إضافية للديكور الخارجي ومناطق الاستراحة.</p>
     </section>
-    <section class="map-section">
+    <!-- <section class="map-section">
+    <h2>موقعنا على الخريطة</h2>
+        <h2>موقعنا على الخريطة</h2>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3786.1310883789056!2d42.70638448510908!3d18.386884087486933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDIzJzEyLjgiTiA0MsKwNDInMTUuMSJF!5e0!3m2!1sar!2s!4v1764259554718!5m2!1sar!2s"       width="100%"
+        height="350"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 </section>
     <footer>
       <footer>
