--- a/pyramid-shades.html
+++ b/pyramid-shades.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
- <title>أفضل مظلات وبرجولات وهناجر في خميس مشيط وأبها | مؤسسة بدرية للمقاولات</title>
+ <title>مظلات حميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
@@ -16,8 +16,9 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <div class="logo">مؤسسة بدرية</div>
-          <div>
+          <div class="logo">
+              <img src="https://ik.imagekit.io/lx9tl2p3c/logo.jpg" alt="لوجو 1" class="">
+          </div>          <div>
             <h1>مظلات وخدمات البناء</h1>
             <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مؤسسة بدرية للمقاولات</div>
           </div>
