--- a/iron-sater.html
+++ b/iron-sater.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
- <title>مظلات حميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
+ <title>مظلات خميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
  
   <link rel="stylesheet" href="style.css">
 
