--- a/school-shades.html
+++ b/school-shades.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>مظلات حميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
+ <title>مظلات خميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
