--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta name="google-site-verification" content="U_2nR9b2bVUslx7p3CKl7CbvLacYHCKK8E7RXiGoqtQ" />
   <meta charset="utf-8" />
-    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
@@ -108,54 +107,48 @@
 <section class="hero">
   <div class="container">
   <div class="gallery">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/1.jpg?updatedAt=1763734897346" alt="صورة 1" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/2.jpg?updatedAt=1763735077831" alt="صورة 2" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/3.jpg?updatedAt=1763735078748" alt="صورة 3" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/4.jpg?updatedAt=1763734901877" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/5.jpg?updatedAt=1763734867755" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/6.jpg?updatedAt=1763734926546" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/7.jpg?updatedAt=1763734927744" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/40.jpg?updatedAt=1763734909593" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/9.jpg?updatedAt=1763734948354" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/10.jpg?updatedAt=1763734991658" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/11.jpg?updatedAt=1763734863117" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/12.jpg?updatedAt=1763734910069" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/13.jpg?updatedAt=1763734949633" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/14.jpg?updatedAt=1763734870146" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/15.jpg?updatedAt=1763735026278" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/16.jpg?updatedAt=1763734924695" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/17.jpg?updatedAt=1763734987285" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/18.jpg?updatedAt=1763734972264" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/19.jpg?updatedAt=1763734953224" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/20.jpg?updatedAt=1763734868176" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/21.jpg?updatedAt=1763734949589" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/22.jpg?updatedAt=1763735025836" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/23.jpg?updatedAt=1763734924680" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/24.jpg?updatedAt=1763734975282" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/25.jpg?updatedAt=1763735160837" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/27.jpg?updatedAt=1763735051741" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/28.jpg" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/29.jpg?updatedAt=1763735074868" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/30.jpg?updatedAt=1763734971999" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/33.jpg?updatedAt=1763735076430" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/34.jpg?updatedAt=1763735054484" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/35.jpg?updatedAt=1763734997616" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/36.jpg?updatedAt=1763735141116" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/37.jpg?updatedAt=1763735033982" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/40.jpg?updatedAt=1763734909593" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/41.jpg?updatedAt=1763736152084" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/42.jpg?updatedAt=1763734962949" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/55.jpg?updatedAt=1763735152508" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/59.jpg?updatedAt=1763735180003" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/66.jpg?updatedAt=1763735154003" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/67.jpg?updatedAt=1763735159252" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/68.jpg?updatedAt=1763735055082" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="صورة 4" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/1.jpg?updatedAt=1763734897346" alt="مظلات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/2.jpg?updatedAt=1763735077831" alt="مظلات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/3.jpg?updatedAt=1763735078748" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/4.jpg?updatedAt=1763734901877" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/5.jpg?updatedAt=1763734867755" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/6.jpg?updatedAt=1763734926546" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/7.jpg?updatedAt=1763734927744" alt="درابزين" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/9.jpg?updatedAt=1763734948354" alt="طاولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/10.jpg?updatedAt=1763734991658" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/11.jpg?updatedAt=1763734863117" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/12.jpg?updatedAt=1763734910069" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/13.jpg?updatedAt=1763734949633" alt="خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/14.jpg?updatedAt=1763734870146" alt="خميس مشيط أبها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/15.jpg?updatedAt=1763735026278" alt="ابها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/16.jpg?updatedAt=1763734924695" alt="مظلات سيارات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/17.jpg?updatedAt=1763734987285" alt="مظلات هرمية" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/18.jpg?updatedAt=1763734972264" alt="مظلات هرميه" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/19.jpg?updatedAt=1763734953224" alt="مظلات مدارس" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/20.jpg?updatedAt=1763734868176" alt="سواتر حديد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/21.jpg?updatedAt=1763734949589" alt="سواتر أحواش " class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/22.jpg?updatedAt=1763735025836" alt="سواتر احواش " class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/23.jpg?updatedAt=1763734924680" alt="سواتر حديد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/24.jpg?updatedAt=1763734975282" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/25.jpg?updatedAt=1763735160837" alt="سواتر خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" alt="حداد خميس مشيط ابها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/27.jpg?updatedAt=1763735051741" alt="سواتر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/28.jpg" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/29.jpg?updatedAt=1763735074868" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/30.jpg?updatedAt=1763734971999" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="0556076357" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="سواتر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="هنجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/40.jpg?updatedAt=1763734909593" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/41.jpg?updatedAt=1763736152084" alt="قرميد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/42.jpg?updatedAt=1763734962949" alt="سندوتش بنل" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/55.jpg?updatedAt=1763735152508" alt="طاولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/59.jpg?updatedAt=1763735180003" alt="مظلات سيارات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/66.jpg?updatedAt=1763735154003" alt="مظلات حدائق" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/67.jpg?updatedAt=1763735159252" alt="ابها" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/68.jpg?updatedAt=1763735055082" alt="خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="بدرية" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="بدريه" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/72.jpg?updatedAt=1763735100745" alt="صورة 4" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/73.jpg?updatedAt=1763734981057" alt="صورة 4" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/74.jpg?updatedAt=1763735124283" alt="صورة 4" class="img-item">
@@ -174,25 +167,16 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/92.jpg?updatedAt=1763735087039" alt="صورة 4" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/94.jpg?updatedAt=1763735108132" alt="صورة 4" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/95.jpg?updatedAt=1763735126413" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/97.jpg?updatedAt=1763735106759" alt="صورة 4" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/124.jpg?updatedAt=1763735194149" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="مؤسسة بدرية" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/97.jpg?updatedAt=1763735106759" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/124.jpg?updatedAt=1763735194149" alt="مظلات خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/125.jpg?updatedAt=1763735129305" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/126.jpg?updatedAt=1763735194929" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/127.jpg?updatedAt=1763735172422" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/128.jpg?updatedAt=1763735202413" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/129.jpg?updatedAt=1763735160067" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/123.jpg?updatedAt=1763735036843" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/100.jpg?updatedAt=1763734920047" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/101.jpg?updatedAt=1763734920077" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/102.jpeg?updatedAt=1763734920046" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/103.jpg?updatedAt=1763734945295" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/104.jpg?updatedAt=1763734977430" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/105.jpg?updatedAt=1763734979223" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/107.jpg?updatedAt=1763734982017" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/108.jpeg?updatedAt=1763734979356" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/109.jpg?updatedAt=1763735029329" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" class="img-item">
+   <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/112.jpg?updatedAt=1763735056316" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/113.jpeg?updatedAt=1763735040597" class="img-item">
@@ -205,14 +189,12 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/159.jpg?updatedAt=1763735124417" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/160.jpeg?updatedAt=1763735125045" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/130.jpeg?updatedAt=1763735104168" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/131.jpg?updatedAt=1763735150185" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/133.jpg?updatedAt=1763735121725" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/134.jpg?updatedAt=1763735100472" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/135.jpg?updatedAt=1763735080938" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/136.jpg?updatedAt=1763735081247" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/137.jpg?updatedAt=1763735100206" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/146.jpg?updatedAt=1763735131747" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%A7%D8%B3%D8%B7%D8%AD-%D9%82%D9%85%D8%A7%D8%B498.jpeg" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/thump_%D8%A7%D9%81%D8%B6%D9%84-%D8%A8%D8%B1%D8%AC%D9%88%D9%84%D8%A7%D8%AA-%D8%AE%D8%B4%D8%A8-%D8%A8%D8%A7%D9%84%D8%B1%D9%8A%D8%A7%D8%B658.jpg" class="img-item">
@@ -392,12 +374,26 @@
       </div>
     </section>
 
+
+<section style="margin-top:20px">
+  <h1>مظلات هناجر برجولات حداد خميس مشيط ابها</h1>
+  <p style="color:var(--muted); line-height:1.8">
+      نقدم خدمات تركيب جميع أنواع المظلات السواتر البرجولات في خميس مشيط وأبها
+      بجودة عالية وأسعار تنافسية. نقدم مظلات سيارات، مظلات حدائق، مظلات حديد،
+      مظلات قماش، برجولات خشبية وحديد، سواتر أحواش، وهناجر بمواصفات عالية.  
+      نعمل في جميع مناطق ابها بما فيها خميس مشيط، أبها، سراة عبيدة،
+      مع توفير ضمان وخامات ممتازة وتصاميم عصرية تلبي احتياجات المنازل والفلل
+      والاستراحات.
+  </p>
+</section>
+
+
     <!-- اختصارات لأقسام الصفحات الأخرى (نماذج) -->
     <section class="card" id="m1" style="margin-top:8px">
       <h3>مظلات سيارات</h3>
       <p style="color:var(--muted)">مظلات سيارات نقوم بتركيب مظلات وسواتر خميس مشيط مظلات وسواتر حديد مظلات وسواتر خميس مشيط مظلات وسواتر قماش مظلات وسواتر مدارس مظلات وسواتر عسير خميس مشيط بأعلى جودة تصاميم متعددة ومبتكرة لجميع انواع المظلات مظلات تلبي جميع الاحتياجات مظلات حدائق احواش جلسات وباسعار تنافسية مظلات حديد مظلات حدائق مظلات قماش مظلات جلسات خارجية عسير خميس مشيط وجميع مدن المملكة .
 
-.</p>
+</p>
     </section>
 
     <section class="card" id="pergola" style="margin-top:12px">
