--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta name="google-site-verification" content="U_2nR9b2bVUslx7p3CKl7CbvLacYHCKK8E7RXiGoqtQ" />
   <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="مظلات ابها خميس مشيط ">
+<meta name="abstract" content="مظلات برجولات ابها خميس مشيط ">
+<meta property="og:locale" content="ar_AR">
+<meta property="og:type" content="website">
+<meta property="og:title" content="حداد خميس مشيط">
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
  <title>مظلات خميس مشيط-أبها|هناجر خميس مشيط-أبها|حداد خميس مشيط-أبها</title>
